--- a/SpikaEnterprise/res/drawable/notification_icon.xml
+++ b/SpikaEnterprise/res/drawable/notification_icon.xml
@@ -4,5 +4,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/red"/>
+    <solid android:color="@color/red_solid"/>
 </shape>
