--- a/SpikaEnterprise/res/values/color.xml
+++ b/SpikaEnterprise/res/values/color.xml
@@ -7,6 +7,7 @@
     <color name="text_blue">#52bbe2</color>
     <color name="green">#71d654</color>
     <color name="red">#d75555</color>
+    <color name="red_solid">#ff0000</color>
     <color name="divider_gray">#d8e1e7</color>
     <color name="text_gray">#c0c0c0</color>
     <color name="text_dark_gray">#949494</color>
