--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -132,7 +132,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:text="play"/>
+                        android:background="@drawable/play_button"/>
                     
                     <ProgressBar
                         android:id="@+id/mePbSound"
@@ -327,7 +327,7 @@
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:layout_centerVertical="true"
-                            android:text="play" />
+                            android:background="@drawable/play_button" />
 
                         <ProgressBar
                             android:id="@+id/YouPbSound"
@@ -362,6 +362,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="5dp"
+                            android:max="100"
                             android:layout_toRightOf="@id/youChronoPlay"
                             android:thumb="@drawable/shape_thumb" />
 
