--- a/SpikaEnterprise/res/layout/activity_photo.xml
+++ b/SpikaEnterprise/res/layout/activity_photo.xml
@@ -58,13 +58,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/default_blue_light" />
-        
-        <WebView
-            android:id="@+id/webView"
-            android:layout_width="match_parent"
+
+        <ProgressBar
+            android:id="@+id/pbLoading"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true" 
-            android:visibility="gone"/>
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+        
     </RelativeLayout>
 
 </RelativeLayout>
