--- a/SpikaEnterprise/res/layout/fragment_users_list.xml
+++ b/SpikaEnterprise/res/layout/fragment_users_list.xml
@@ -2,8 +2,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
+    
+    <EditText android:id="@+id/etSearchPeople"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:singleLine="true"
+        android:hint="@string/search_for_people"
+        android:background="@color/trans"
+        android:textColorHint="@color/text_gray_image"
+        android:textCursorDrawable="@drawable/shape_text_cursor_drawable"
+        android:textColor="@android:color/black"
+        android:imeOptions="actionSearch"/>
+    
+    <View android:id="@+id/lineBelowSearch"
+        android:layout_below="@id/etSearchPeople"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/light_light_gray"/>
 
     <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
+        android:layout_below="@id/lineBelowSearch"
         android:id="@+id/mainListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
